# navigator-session

./: .coveragerc  .gitignore  .mypy.ini  CONTRIBUTING.md  Makefile  pyproject.toml  pytest.ini  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  release.yml
docs/: requirements-dev.txt
examples/: test_handler.py
navigator_session/: __init__.py  data.py  version.py
navigator_session/storages/: abstract.py  redis.py
navigator_session/vault/: __init__.py  config.py  crypto.py  key_rotation.py  session_vault.py
tests/: test_session_data.py
